commit all changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="topic">Introduction to Javascript</h1>
     <p id="types">Datatypes</p>
     <p id="conditionals">conditionals</p>
-    <p id="leaning">Learning DOM</p>
+    <p id="learning">Learning DOM</p>
     <script src="src/index.js"> </script>
 </body>
 </html>
