commit all changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
-    <h1>Introduction to Javascript</h1>
+    <h1 id="topic">Introduction to Javascript</h1>
+    <p id="types">Datatypes</p>
+    <p id="conditionals">conditionals</p>
+    <p id="leaning">Learning DOM</p>
     <script src="src/index.js"> </script>
 </body>
 </html>
